# shadow-agent-framework

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: notify-slack.yml
docs/: PostAssistantResponse_Hook.md  README.md  anthropic-rust-sdk-doc.md  architecture.md  conversation-system.md  decisions-and-rationale.md  docs.json  dynamic-auth-implementation.md  extended-thinking-implementation.md  framework-architecture.md  hooks-implementation-plan.md  hooks-implementation.md  implementation-phases.md  implementation-plan.md  implementation-progress.md  initial-implementation.md  interrupt-implementation.md  introduction.mdx  logging-guide.md  project-overview.md  quickstart.mdx  session-notes.md  streaming-implementation.md  subagent-manager.md  tech-stack.md
docs/advanced/: context-injection.mdx  subagents.mdx
docs/api/: agent-config.mdx  agent-handle.mdx  output-chunk.mdx
docs/api-reference/: introduction.mdx
docs/concepts/: architecture.mdx  message-flow.mdx  runtime.mdx  sessions.mdx  states.mdx
docs/features/: ask-user-questions.mdx  attachments.mdx  extended-thinking.mdx  images-pdfs.mdx  interrupts.mdx  prompt-caching.mdx  streaming.mdx
docs/hooks/: overview.mdx
docs/integration/: tauri.mdx
docs/llm/: providers.mdx
docs/mcp/: integration.mdx
docs/permissions/: dangerous-skip.mdx  handling.mdx  three-tier.mdx
docs/tools/: built-in.mdx  custom.mdx
examples/: console_agent.rs  test_agent.rs
examples/demo_agent/: agent.rs  main.rs
examples/display_streaming/: main.rs
examples/gemini_test_agent/: main.rs  tools.rs
examples/integration_test/: file_summary_agent.rs  main.rs  summarize_file_tool.rs
examples/mcp_agent/: README.md  main.rs
examples/test_agent/: README.md  agent.rs  main.rs  tools.rs
src/: lib.rs  main.rs
src/agent/: agent_loop.rs  config.rs  executor.rs  mod.rs  standard_loop.rs  todo_tracker.rs
src/cli/: console.rs  mod.rs  renderer.rs
src/conversation/: conversation.rs  message.rs  mod.rs
src/core/: context.rs  error.rs  mod.rs  output.rs  state.rs
src/debugger/: mod.rs
src/helpers/: context_injection.rs  conversation_namer.rs  debugger.rs  mod.rs  todo_manager.rs
src/hooks/: mod.rs  registry.rs  types.rs
src/llm/: anthropic.rs  auth.rs  gemini.rs  mod.rs  provider.rs  swappable.rs  types.rs
src/mcp/: config.rs  manager.rs  mod.rs  provider.rs  server.rs  tool_adapter.rs
src/permissions/: manager.rs  mod.rs
src/runtime/: channels.rs  handle.rs  internals.rs  mod.rs  runtime.rs  subagent_manager.rs
src/session/: metadata.rs  mod.rs  session.rs  storage.rs
src/tools/: bash.rs  edit_tool.rs  glob_tool.rs  grep_tool.rs  mod.rs  provider.rs  read_tool.rs  registry.rs  todo.rs  tool.rs  write_tool.rs
src/tools/common/: ask_user_question.rs  bash.rs  edit_tool.rs  glob_tool.rs  grep_tool.rs  mod.rs  present_file.rs  read_tool.rs  todo.rs  write_tool.rs
