[package]
name = "singapore-project"
version = "0.1.0"
edition = "2021"

[dependencies]
# Anthropic SDK for LLM interaction
anthropic-sdk-rust = "0.1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Stream handling
futures = "0.3"

# Terminal colors and formatting
colored = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Conversation management
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
