[package]
name = "shadow-agent-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for Anthropic API (also used by MCP via rmcp)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "process"] }

# Tokio utilities for stream handling
tokio-util = { version = "0.7", features = ["io"] }

# Async stream creation
async-stream = "0.3"

# Stream handling
futures = "0.3"

# Async trait support
async-trait = "0.1"

# Glob pattern matching for file tools
glob = "0.3"

# Terminal colors and formatting
colored = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for images and PDFs
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Conversation management
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.24.0"
regex = "1.12.2"

# MCP (Model Context Protocol) support
rmcp = { version = "0.14", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

[[example]]
name = "mcp_agent"
path = "examples/mcp_agent/main.rs"

[[example]]
name = "gemini_test_agent"
path = "examples/gemini_test_agent/main.rs"
